@@ -1,5 +1,6 @@
 Changes for 1.3.8
    Don't report power of two warning for background images
+   Allow undo for texture coordinate vertex selection
    Rotate texture coordinates
    Horizontal/vertical flip texture coordinates
    Allow user to set color of texture coordinate lines and selection vertices.
